<?xml version="1.0" encoding="utf-8"?>

<ScrollView
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@android:color/white"
		android:scrollbars="vertical">

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:scrollbars="vertical"
			android:orientation="vertical"
			android:layout_margin="@dimen/activity_vertical_margin"
			android:background="@android:color/white"
			tools:context=".ui.activity.SoftSkills">

		<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textColor="@android:color/black"
				android:textSize="@dimen/dimen_16sp"
				android:text="@string/teamwork"/>
		<TextView
				android:id="@+id/soft_teamwork"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textColor="@android:color/darker_gray"
				android:textSize="@dimen/dimen_14sp"
				android:layout_marginBottom="@dimen/dimen_14sp"/>
		<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textColor="@android:color/black"
				android:textSize="@dimen/dimen_16sp"
				android:text="@string/continuous_learning"/>
		<TextView
				android:id="@+id/soft_continuous"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textColor="@android:color/darker_gray"
				android:textSize="@dimen/dimen_14sp"
				android:layout_marginBottom="@dimen/dimen_14sp"/>
		<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textColor="@android:color/black"
				android:textSize="@dimen/dimen_16sp"
				android:text="@string/open_minded"/>
		<TextView
				android:id="@+id/soft_open_minded"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textColor="@android:color/darker_gray"
				android:textSize="@dimen/dimen_14sp"/>

	</LinearLayout>

</ScrollView>